--- a/eventos-anteriores.html
+++ b/eventos-anteriores.html
@@ -35,14 +35,14 @@
                 Participación
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                <a class="dropdown-item" href="portfolio-1-col.html">Registro</a>
+                <a class="dropdown-item" href="index.html">Registro</a>
                 <a class="dropdown-item" href="logistica.html">Logística</a>
                 <a class="dropdown-item" href="faq.html">Preguntas Frecuentes</a>
               </div>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="about.html">Agenda</a>
+              <a class="nav-link" href="index.html">Agenda</a>
             </li>
 
             <li class="nav-item active ">
@@ -61,9 +61,7 @@
     <!-- Contenido -->
     <div class="container">
 
-      <!-- Encabezado de pagina -->
-      <h1 class="mt-4 mb-3">Eventos Anteriores</h1>
-
+    <br><br>
     <!-- Barra de Ubicacion -->
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
