--- a/contact.html
+++ b/contact.html
@@ -35,14 +35,14 @@
                   Participación
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                  <a class="dropdown-item" href="portfolio-1-col.html">Registro</a>
+                  <a class="dropdown-item" href="index.html">Registro</a>
                   <a class="dropdown-item" href="logistica.html">Logística</a>
                   <a class="dropdown-item" href="faq.html">Preguntas Frecuentes</a>
                 </div>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="about.html">Agenda</a>
+                <a class="nav-link" href="index.html">Agenda</a>
               </li>
 
               <li class="nav-item">
@@ -61,16 +61,13 @@
     <!-- Page Content -->
     <div class="container">
 
-      <!-- Page Heading/Breadcrumbs -->
-      <h1 class="mt-4 mb-3">Contact
-        <small>Subheading</small>
-      </h1>
+      <br><br>
 
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
-          <a href="index.html">Home</a>
+          <a href="index.html">Inicio</a>
         </li>
-        <li class="breadcrumb-item active">Contact</li>
+        <li class="breadcrumb-item active">Sede y Contacto</li>
       </ol>
 
       <!-- Content Row -->
@@ -78,7 +75,8 @@
         <!-- Map Column -->
         <div class="col-lg-8 mb-4">
           <!-- Embedded Google Map -->
-          <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe>
+          <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3876.6166672961376!2d-89.23791498593745!3d13.681057802616728!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f6331cd305c735b%3A0x3d2a75b3761d4ded!2sCentral+American+University!5e0!3m2!1sen!2sus!4v1515216023062"></iframe>
         </div>
         <!-- Contact Details Column -->
         <div class="col-lg-4 mb-4">
@@ -107,7 +105,7 @@
       <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
       <div class="row">
         <div class="col-lg-8 mb-4">
-          <h3>Send us a Message</h3>
+          <h3>Contactanos</h3>
           <form name="sentMessage" id="contactForm" novalidate>
             <div class="control-group form-group">
               <div class="controls">
