--- a/logistica.html
+++ b/logistica.html
@@ -16,9 +16,15 @@
     <!-- Custom styles for this template -->
     <link href="css/modern-business.css" rel="stylesheet">
 
+    <style>
+    #estatico {
+        position: fixed;
+    }
+    </style>
+
   </head>
 
-  <body>
+  <body data-spy="scroll" data-target="#scrollpy">
 
     <!-- Barra de Navegacion -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -35,14 +41,14 @@
                   Participación
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                  <a class="dropdown-item" href="portfolio-1-col.html">Registro</a>
+                  <a class="dropdown-item" href="index.html">Registro</a>
                   <a class="dropdown-item" href="logistica.html">Logística</a>
                   <a class="dropdown-item" href="faq.html">Preguntas Frecuentes</a>
                 </div>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="about.html">Agenda</a>
+                <a class="nav-link" href="index.html">Agenda</a>
               </li>
 
               <li class="nav-item">
@@ -73,36 +79,67 @@
 
       <!-- Content Row -->
       <div class="row">
-        <!-- Sidebar Column -->
-        <div class="col-lg-3 mb-4">
-          <div id="list-example" class="list-group">
-            <a class="list-group-item list-group-item-action" href="#list-item-1">Item 1</a>
-            <a class="list-group-item list-group-item-action" href="#list-item-2">Item2</a>
-            <a class="list-group-item list-group-item-action" href="#list-item-3">Item 3</a>
-            <a class="list-group-item list-group-item-action" href="#list-item-4">Item 4</a>
 
+          <!-- Sidebar Column -->
+          <div class="col-lg-2 mb-4">
+            <div id="menu">
+              <ul class="nav flex-column nav-pills nav-justified fixed">
+                <li class="nav-item ">
+                  <a class="nav-link active" href="#">Item 1</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Item 2</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Item 3</a>
+                </li>
+              </ul>
+            </div>
           </div>
-        </div>
 
-        <!-- Content Column -->
-        <div class="col-lg-9 mb-4">
+          <!-- Content Column -->
+          <div class="col-lg-9 mb-4">
+              <div data-spy="scroll" data-target="#menu" data-offset="0">
 
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, et temporibus, facere perferendis
-                veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate
-               dolores iure maxime ducimus fugit.Quis anim sit do amet fugiat dolor velit sit ea ea do reprehenderit
-               culpa duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip culpa aute tempor
-               reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat mollit culpa irure ullamco
-               veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate
-              dolores iure maxime ducimus fugit.Quis anim sit do amet fugiat dolor velit sit ea ea do reprehenderit
-              culpa duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip culpa aute tempor
-              reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat mollit culpa irure ullamco
-              veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate
-             dolores iure maxime ducimus fugit.Quis anim sit do amet fugiat dolor velit sit ea ea do reprehenderit
-             culpa duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip culpa aute tempor
-             reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat mollit culpa irure ullamco
-                 veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate
-                dolores iure maxime ducimus fugit.</p>
+                <div id="item-1">
+                    <h1 class="display-4">Item 1 </h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, et temporibus, facere perferendis
+                    veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate
+                    dolores iure maxime ducimus fugit.Quis anim sit do amet fugiat dolor velit sit ea ea do reprehenderit
+                    culpa duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip culpa aute tempor
+                    reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat mollit culpa irure ullamco
+                    veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate
+                    dolores iure maxime ducimus fugit.Quis anim sit do amet fugiat dolor velit sit ea ea do reprehenderit
+                    culpa duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip culpa aute tempor
+                    reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat mollit culpa irure ullamco
+                    veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate
+                    dolores iure maxime ducimus fugit.Quis anim sit do amet fugiat dolor velit sit ea ea do reprehenderit
+                    culpa duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip culpa aute tempor
+                    reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat mollit culpa irure ullamco
+                    veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate
+                    dolores iure maxime ducimus fugit.</p>
                 </div>
+
+                <div id="item-2">
+                    <h1 class="display-4">Item 1 </h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, et temporibus, facere perferendis
+                    veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate
+                    dolores iure maxime ducimus fugit.Quis anim sit do amet fugiat dolor velit sit ea ea do reprehenderit
+                    culpa duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip culpa aute tempor
+                    reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat mollit culpa irure ullamco
+                    veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate
+                    dolores iure maxime ducimus fugit.Quis anim sit do amet fugiat dolor velit sit ea ea do reprehenderit
+                    culpa duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip culpa aute tempor
+                    reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat mollit culpa irure ullamco
+                    veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate
+                    dolores iure maxime ducimus fugit.Quis anim sit do amet fugiat dolor velit sit ea ea do reprehenderit
+                    culpa duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip culpa aute tempor
+                    reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat mollit culpa irure ullamco
+                    veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate
+                    dolores iure maxime ducimus fugit.</p>
+                </div>
+            </div>
+        </div>
       </div>
       <!-- /.row -->
 
