--- a/logistica.html
+++ b/logistica.html
@@ -16,15 +16,10 @@
     <!-- Custom styles for this template -->
     <link href="css/modern-business.css" rel="stylesheet">
 
-    <style>
-    #estatico {
-        position: fixed;
-    }
-    </style>
 
   </head>
 
-  <body data-spy="scroll" data-target="#scrollpy">
+  <body>
 
     <!-- Barra de Navegacion -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -83,22 +78,22 @@
           <!-- Sidebar Column -->
           <div class="col-lg-2 mb-4">
             <div id="menu">
-              <ul class="nav flex-column nav-pills nav-justified fixed">
-                <li class="nav-item ">
-                  <a class="nav-link active" href="#">Item 1</a>
+              <ul class="nav nav-pills flex-column  nav-justified">
+                <li class="nav-item active">
+                  <a class="nav-link " href="#item-1">Item 1</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Item 2</a>
+                  <a class="nav-link" href="#item-2">Item 2</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Item 3</a>
+                  <a class="nav-link" href="#item-3">Item 3</a>
                 </li>
               </ul>
             </div>
           </div>
 
           <!-- Content Column -->
-          <div class="col-lg-9 mb-4">
+          <div class="col-lg-10 mb-4" style="height : 400px; overflow : auto;">
               <div data-spy="scroll" data-target="#menu" data-offset="0">
 
                 <div id="item-1">
@@ -121,7 +116,7 @@
                 </div>
 
                 <div id="item-2">
-                    <h1 class="display-4">Item 1 </h1>
+                    <h1 class="display-4">Item 2 </h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, et temporibus, facere perferendis
                     veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate
                     dolores iure maxime ducimus fugit.Quis anim sit do amet fugiat dolor velit sit ea ea do reprehenderit
@@ -138,6 +133,25 @@
                     veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate
                     dolores iure maxime ducimus fugit.</p>
                 </div>
+                <div id="item-3">
+                    <h1 class="display-4">Item 3 </h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, et temporibus, facere perferendis
+                    veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate
+                    dolores iure maxime ducimus fugit.Quis anim sit do amet fugiat dolor velit sit ea ea do reprehenderit
+                    culpa duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip culpa aute tempor
+                    reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat mollit culpa irure ullamco
+                    veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate
+                    dolores iure maxime ducimus fugit.Quis anim sit do amet fugiat dolor velit sit ea ea do reprehenderit
+                    culpa duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip culpa aute tempor
+                    reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat mollit culpa irure ullamco
+                    veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate
+                    dolores iure maxime ducimus fugit.Quis anim sit do amet fugiat dolor velit sit ea ea do reprehenderit
+                    culpa duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip culpa aute tempor
+                    reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat mollit culpa irure ullamco
+                    veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate
+                    dolores iure maxime ducimus fugit.</p>
+                </div>
+
             </div>
         </div>
       </div>
