--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                   Participación
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                  <a class="dropdown-item" href="index.html">Registro</a>
-                  <a class="dropdown-item" href="logistica.html">Logística</a>
-                  <a class="dropdown-item" href="faq.html">Preguntas Frecuentes</a>
+                  <a class="dropdown-item" href="index.html"><i class="fa fa-address-card-o" aria-hidden="true"></i> Registro</a>
+                  <a class="dropdown-item" href="logistica.html"><i class="fa fa-info-circle" aria-hidden="true"></i> Logística</a>
+                  <a class="dropdown-item" href="faq.html"><i class="fa fa-question-circle-o" aria-hidden="true"></i> Preguntas Frecuentes</a>
                 </div>
               </li>
 
@@ -175,15 +175,15 @@
              </div>
 
               <div class="columns column-3 text-center col-md-3">
-                  <div class="textwidget"><img src="img/icon-mapa.png"><h3><a href="index.html" class="text-white">Cómo llegar</a></h3></div>
+                  <div class="textwidget"><i class="fa fa-map-marker main-icons" aria-hidden="true"></i><h3><a href="index.html" class="text-white">Cómo llegar</a></h3></div>
               </div>
 
               <div class="columns column-3 text-center col-md-3">
-                  <div class="textwidget"><img src="img/icon-hotel.png"><h3><a href="index.html" class="text-white">Hotel</a></h3></div>
+                  <div class="textwidget"><i class="fa fa-bed main-icons" aria-hidden="true"></i><h3><a href="index.html" class="text-white">Hotel</a></h3></div>
               </div>
 
               <div class="columns column-3 text-center col-md-3">
-                <div class="textwidget"><img src="img/icon-FAQ.png"><h3><a href="faq.html" class="text-white">FAQ</a></h3></div>
+                <div class="textwidget"><i class="fa fa-question-circle-o main-icons" aria-hidden="true"></i><h3><a href="faq.html" class="text-white">FAQ</a></h3></div>
               </div>
             </div>
           </div>
