--- a/logistica.html
+++ b/logistica.html
@@ -67,7 +67,7 @@
 
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
-          <a href="index.html">Inicio</a>
+          <a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Inicio</a>
         </li>
         <li class="breadcrumb-item active">Logística</li>
       </ol>
