--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
 
-    <!-- Custom styles for this template -->
+    <!-- Custom styles for this template-->
     <link href="css/modern-business.css" rel="stylesheet">
 
     <!-- Font Awesome-->
@@ -35,18 +35,24 @@
             <ul class="navbar-nav ml-auto">
 
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Participación
+                <a class="nav-link dropdown-toggle" href="#" id="navbarinformacion" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Información General
                 </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                  <a class="dropdown-item" href="index.html"><i class="fa fa-address-card-o" aria-hidden="true"></i> Registro</a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarinformacion">
                   <a class="dropdown-item" href="logistica.html"><i class="fa fa-info-circle" aria-hidden="true"></i> Logística</a>
                   <a class="dropdown-item" href="faq.html"><i class="fa fa-question-circle-o" aria-hidden="true"></i> Preguntas Frecuentes</a>
                 </div>
               </li>
 
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">Agenda</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarEvento" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Evento
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarEvento">
+                  <a class="dropdown-item" href="index.html"><i class="fa fa-address-card-o" aria-hidden="true"></i> Registro</a>
+                  <a class="dropdown-item" href="logistica.html"><i class="fa fa-list-ul" aria-hidden="true"></i> Ejes Temáticos</a>
+                  <a class="dropdown-item" href="faq.html"><i class="fa fa-calendar" aria-hidden="true"></i>  Agenda</a>
+                </div>
               </li>
 
               <li class="nav-item">
@@ -54,9 +60,8 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Sede y Contactos</a>
+                <a class="nav-link" href="contact.html">Contactos</a>
               </li>
-
             </ul>
           </div>
       </div>
@@ -167,19 +172,19 @@
     <section class="about-us section-padding">
         <div class="jumbotron jumbotron-fluid bg-dark">
           <div class="container">
-            <h1 class="display-5 text-center text-white">Informacion General</h1>
+            <h1 class="display-5 text-center text-white">Información General</h1><br>
             <div class="row">
               <div class="columns column-3 text-center col-md-3">
                   <!-- <div class="textwidget"><img src="img/icon-registro.png"><h3><a href="index.html" class="text-white">Registro</a></h3></div> -->
-                  <div class="textwidget"><i class="fa fa-address-card-o main-icons" aria-hidden="true"></i><h3><a href="index.html" class="text-white">Registro</a></h3></div>
+                  <div class="textwidget"><i class="fa fa-user-circle-o main-icons" aria-hidden="true"></i><h3><a href="index.html" class="text-white">Participación</a></h3></div>
              </div>
 
               <div class="columns column-3 text-center col-md-3">
-                  <div class="textwidget"><i class="fa fa-map-marker main-icons" aria-hidden="true"></i><h3><a href="index.html" class="text-white">Cómo llegar</a></h3></div>
+                  <div class="textwidget"><i class="fa fa-bed main-icons" aria-hidden="true"></i><h3><a href="index.html" class="text-white">Hospedaje</a></h3></div>
               </div>
 
               <div class="columns column-3 text-center col-md-3">
-                  <div class="textwidget"><i class="fa fa-bed main-icons" aria-hidden="true"></i><h3><a href="index.html" class="text-white">Hotel</a></h3></div>
+                  <div class="textwidget"><i class="fa fa-university main-icons" aria-hidden="true"></i><h3><a href="index.html" class="text-white">Sede</a></h3></div>
               </div>
 
               <div class="columns column-3 text-center col-md-3">
