--- a/logistica.html
+++ b/logistica.html
@@ -87,9 +87,15 @@
           <!-- Sidebar Column -->
           <div class="col-lg-2 mb-4">
             <div id="menu">
-              <ul class="nav nav-pills flex-column  nav-justified">
+              <ul class="nav nav-pills flex-column">
                 <li class="nav-item active">
                   <a class="nav-link " href="#item-1">Item 1</a>
+                  <ul class="nav nav-pills flex-column">
+                    <li class="nav-item">
+                      <a class="nav-link ml-3 my-1" href="#item-1-1">Item 1-1</a>
+                    </li>
+                  </ul>
+
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#item-2">Item 2</a>
@@ -122,6 +128,18 @@
                     reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat mollit culpa irure ullamco
                     veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate
                     dolores iure maxime ducimus fugit.</p>
+
+                    <div id="item-1-1">
+                        <h1 class="display-6">Item 1-1 </h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, et temporibus, facere perferendis
+                        veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate
+                        dolores iure maxime ducimus fugit.Quis anim sit do amet fugiat dolor velit sit ea ea do reprehenderit
+                        culpa duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip culpa aute tempor
+                        reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat mollit culpa irure ullamco
+                        veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate
+                        dolores iure maxime ducimus fugit.</p>
+
+                    </div>
 
                 </div>
 
@@ -166,7 +184,26 @@
         </div>
       </div>
       <!-- /.row -->
-
+      <div class="list-group">
+        <a href="index.html" class="list-group-item">Home</a>
+        <a href="about.html" class="list-group-item">About</a>
+        <a href="services.html" class="list-group-item">Services</a>
+        <a href="contact.html" class="list-group-item">Contact</a>
+        <a href="portfolio-1-col.html" class="list-group-item">1 Column Portfolio</a>
+        <a href="portfolio-2-col.html" class="list-group-item">2 Column Portfolio</a>
+        <a href="portfolio-3-col.html" class="list-group-item">3 Column Portfolio</a>
+        <a href="portfolio-4-col.html" class="list-group-item">4 Column Portfolio</a>
+        <a href="portfolio-item.html" class="list-group-item">Single Portfolio Item</a>
+        <a href="blog-home-1.html" class="list-group-item">Blog Home 1</a>
+        <a href="blog-home-2.html" class="list-group-item">Blog Home 2</a>
+        <a href="blog-post.html" class="list-group-item">Blog Post</a>
+        <a href="full-width.html" class="list-group-item">Full Width Page</a>
+        <a href="sidebar.html" class="list-group-item active">Sidebar Page</a>
+        <a href="faq.html" class="list-group-item">FAQ</a>
+        <a href="404.html" class="list-group-item">404</a>
+        <a href="pricing.html" class="list-group-item">Pricing Table</a>
+      </div>
+    </div>
 
     </div>
     <!-- /.container -->
