--- a/faq.html
+++ b/faq.html
@@ -76,7 +76,7 @@
       <!-- Barra de Ubicacion -->
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
-          <a href="index.html">Inicio</a>
+          <a href="index.html"> <i class="fa fa-home" aria-hidden="true"></i> Inicio</a>
         </li>
         <li class="breadcrumb-item active">FAQ</li>
       </ol>
