--- a/index.html
+++ b/index.html
@@ -25,27 +25,32 @@
   <body>
 
     <!-- Barra de Navegacion -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
           <a class="navbar-brand" href="index.html">
-            <img src="img/Logo.png" width="70" height="40" class="d-inline-block" alt="">X Encuentro Centroamericano de Software Libre
+            X ECSL -2018
           </a>
+          <!-- <img src="img/Logo.png" width="70" height="40" class="d-inline-block" alt=""> -->
 
-          <div class="collapse navbar-collapse" id="navbarResponsive">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
 
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarinformacion" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarinfo" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Información General
                 </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarinformacion">
+                <div class="dropdown-menu" aria-labelledby="navbarinfo">
                   <a class="dropdown-item" href="logistica.html"><i class="fa fa-info-circle" aria-hidden="true"></i> Logística</a>
                   <a class="dropdown-item" href="faq.html"><i class="fa fa-question-circle-o" aria-hidden="true"></i> Preguntas Frecuentes</a>
                 </div>
               </li>
 
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarEvento" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarEvento" data-toggle="dropdown"  role="button" aria-haspopup="true" aria-expanded="false">
                   Evento
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarEvento">
@@ -113,7 +118,7 @@
     <section class="about-us section-padding">
       <div class="jumbotron jumbotron-fluid bg-dark">
         <div class="container">
-          <h1 class="display-5 text-center text-white"><strong>X Encuentro Centroamericano de Software Libre</strong></h1>
+          <h2 class="text-center text-white"><strong>X Encuentro Centroamericano de Software Libre</strong></h2>
           <p class="lead text-center text-white">El Encuentro Centroamericano de Software Libre (ECSL) es un evento anual organizado desde el año 2009
             por y para la comunidad Software Libre Centroamérica (SLCA). El ECSL es una reunión anual de activistas y miembros de comunidades y grupos
             de usuarios que sirve como punto de encuentro y espacio de articulación, educación, coordinación e intercambio de ideas para fortalecer
@@ -204,7 +209,7 @@
       <h2 class="text-center display-5">Patrocinadores</h2><br>
 
       <div class="row">
-        <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
+        <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item border-dark">
           <div class="card h-100">
             <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
             <div class="card-body">
