--- a/logistica.html
+++ b/logistica.html
@@ -120,30 +120,93 @@
       <div class="row">
 
           <!-- Sidebar Column -->
-          <div class="col-lg-2 mb-4">
+          <div class="col-lg-3 mb-4">
             <div id="menu">
               <ul class="nav nav-pills flex-column">
                 <li class="nav-item active">
-                  <a class="nav-link " href="#item-1">Item 1</a>
-                  <ul class="nav nav-pills flex-column border-dark">
+                  <a class="nav-link font-weight-bold" href="#item-1">Participación</a>
+                  <ul class="nav nav-pills flex-column ">
                     <li class="nav-item">
-                      <a class="nav-link ml-3 my-1 " href="#item-1-1">Item 1-1</a>
+                      <a class="nav-link ml-3 my-1 " href="#item-1-1">Dinamica del evento</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link ml-3 my-1 " href="#item-1-2">Cuota de Participación</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link ml-3 my-1 " href="#item-1-3">Contenido de Paquetes</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link ml-3 my-1 " href="#item-1-4">Formas de Pago</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link ml-3 my-1 " href="#item-1-5">Formas de Participación</a>
                     </li>
                   </ul>
 
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#item-2">Item 2</a>
+                  <a class="nav-link font-weight-bold" href="#item-2">Hospedaje</a>
                 </li>
-                <li class="nav-item border-dark">
-                  <a class="nav-link border-dark" href="#item-3">Item 3</a>
+
+                <li class="nav-item">
+                  <a class="nav-link font-weight-bold" href="#item-3">Sede</a>
                 </li>
+
+                <li class="nav-item">
+                  <a class="nav-link font-weight-bold" href="#item-4">Información de Viaje</a>
+                  <ul class="nav nav-pills flex-column ">
+                    <li class="nav-item">
+                      <a class="nav-link ml-3 my-1 " href="#item-4-1">Aire</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link ml-3 my-1 " href="#item-4-2">Tierra</a>
+                    </li>
+                  </ul>
+                </li>
+
+                <li class="nav-item">
+                  <a class="nav-link font-weight-bold" href="#item-5">Movilización</a>
+                  <ul class="nav nav-pills flex-column ">
+                    <li class="nav-item">
+                      <a class="nav-link ml-3 my-1 " href="#item-5-1">Servicio de Autobuses</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link ml-3 my-1 " href="#item-5-2">Servicio de Taxi</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link ml-3 my-1 " href="#item-5-3">Servicio UBER</a>
+                    </li>
+                  </ul>
+                </li>
+
+                <li class="nav-item">
+                  <a class="nav-link font-weight-bold" href="#item-6">Información de El Salvador</a>
+                  <ul class="nav nav-pills flex-column ">
+                    <li class="nav-item">
+                      <a class="nav-link ml-3 my-1 " href="#item-6-1">Moneda Local</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link ml-3 my-1 " href="#item-6-2">Electricidad</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link ml-3 my-1 " href="#item-6-3">Hospitales</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link ml-3 my-1 " href="#item-6-4">Telefonia</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link ml-3 my-1 " href="#item-6-5">Gastronomia</a>
+                    </li>
+                  </ul>
+
+                </li>
+
               </ul>
             </div>
           </div>
 
           <!-- Content Column -->
-          <div class="col-lg-10 mb-4" >
+          <div class="col-lg-9 mb-4" >
               <div data-spy="scroll" data-target="#menu" data-offset="0">
 
                 <div id="item-1">
@@ -219,25 +282,6 @@
         </div>
       </div>
       <!-- /.row -->
-      <div class="list-group">
-        <a href="index.html" class="list-group-item">Home</a>
-        <a href="about.html" class="list-group-item">About</a>
-        <a href="services.html" class="list-group-item">Services</a>
-        <a href="contact.html" class="list-group-item">Contact</a>
-        <a href="portfolio-1-col.html" class="list-group-item">1 Column Portfolio</a>
-        <a href="portfolio-2-col.html" class="list-group-item">2 Column Portfolio</a>
-        <a href="portfolio-3-col.html" class="list-group-item">3 Column Portfolio</a>
-        <a href="portfolio-4-col.html" class="list-group-item">4 Column Portfolio</a>
-        <a href="portfolio-item.html" class="list-group-item">Single Portfolio Item</a>
-        <a href="blog-home-1.html" class="list-group-item">Blog Home 1</a>
-        <a href="blog-home-2.html" class="list-group-item">Blog Home 2</a>
-        <a href="blog-post.html" class="list-group-item">Blog Post</a>
-        <a href="full-width.html" class="list-group-item">Full Width Page</a>
-        <a href="sidebar.html" class="list-group-item active">Sidebar Page</a>
-        <a href="faq.html" class="list-group-item">FAQ</a>
-        <a href="404.html" class="list-group-item">404</a>
-        <a href="pricing.html" class="list-group-item">Pricing Table</a>
-      </div>
     </div>
 
     </div>
