Cambios en el banner principal

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
           <a class="navbar-brand" href="index.html">
-            X ECSL -2018
+            X ECSL 2018
           </a>
           <!-- <img src="img/Logo.png" width="70" height="40" class="d-inline-block" alt=""> -->
 
@@ -112,10 +112,11 @@
         </ol>
         <div class="carousel-inner" role="listbox">
           <!-- Slide One - Set the background image for this slide in the line below -->
-          <div class="carousel-item active" style="background-image: url('https://raw.githubusercontent.com/mgallegos/ecsl-2018/development/img/BannerPrincipal1.png')">
+          <div class="carousel-item active" style="background-image: url('img/BannerPrincipal1.png')">
+          <div class="carousel-item active" style="background-image: url('img/Letras1BannerPrincipal1.png')">
             <div class="carousel-caption d-none d-md-block">
-              <h3>First Slide</h3>
-              <p>This is a description for the first slide.</p>
+             <!-- <h3>First Slide</h3> -->
+             <!-- <p>This is a description for the first slide.</p> -->
             </div>
           </div>
           <!-- Slide Two - Set the background image for this slide in the line below -->
