--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
     <!-- Barra de Navegacion -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-          <a class="navbar-brand" href="index.html">
-            X ECSL -2018
-          </a>
+          <a class="navbar-brand d-none d-md-block" href="index.html">X Encuentro Centroamericano de Software Libre - 2018</a>
+          <a class="navbar-brand d-md-none" href="index.html">X ECSL - 2018</a>
           <!-- <img src="img/Logo.png" width="70" height="40" class="d-inline-block" alt=""> -->
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
