Cambios en index-html

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
              <!-- <p>This is a description for the first slide.</p> -->
             </div>
           </div>
+          </div>
           <!-- Slide Two - Set the background image for this slide in the line below -->
           <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
             <div class="carousel-caption d-none d-md-block">
