--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               </li>
 
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarEvento" data-toggle="dropdown"  role="button" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle " href="#" id="navbarEvento" data-toggle="dropdown"  role="button" aria-haspopup="true" aria-expanded="false">
                   Evento
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarEvento">
@@ -112,8 +112,7 @@
 
         <div class="carousel-inner" role="listbox">
           <!-- Slide One - Set the background image for this slide in the line below -->
-          <div class="carousel-item active">
-            <img class="d-block w-100 " src="img/BannerPrincipal11.png" alt="First slide">
+          <div class="carousel-item active" style="background-image: url('img/BannerPrincipal11.png')">
 
             <div class="carousel-caption d-none d-md-block">
              <!-- <h3>Decimo Encuentro Centroaméricano de Software Libre</h3> -->
