--- a/index.html
+++ b/index.html
@@ -211,25 +211,25 @@
           <div class="container">
             <h2 class="display-5 text-center text-white">Información General</h2><br>
             <div class="row">
-              <div class="columns column-3 text-center col-md-3">
+              <div class="col-12 col-sm-6 text-center col-md-3">
                   <a href="logistica.html" class="text-white">
                     <i class="fa fa-user-circle-o main-icons" aria-hidden="true"></i> <h3>Participación</h3>
                   </a>
              </div>
 
-              <div class="columns column-3 text-center col-md-3">
+              <div class="col-12 col-sm-6 text-center col-md-3">
                 <a href="logistica.html" class="text-white">
                   <i class="fa fa-bed main-icons" aria-hidden="true"></i><h3>Hospedaje</h3>
                 </a>
               </div>
 
-              <div class="columns column-3 text-center col-md-3">
+              <div class="col-12 col-sm-6 text-center col-md-3">
                 <a href="logistica.html" class="text-white">
                   <i class="fa fa-university main-icons" aria-hidden="true"></i><h3>Sede</h3>
                   </a>
               </div>
 
-              <div class="columns column-3 text-center col-md-3">
+              <div class="col-12 col-sm-6 text-center col-md-3">
                 <a href="logistica.html" class="text-white">
                 <i class="fa fa-question-circle-o main-icons" aria-hidden="true"></i><h3>FAQ</h3>
               </a>
