--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
           <!-- Slide One - Set the background image for this slide in the line below -->
           <div class="carousel-item active" style="background-image: url('img/BannerPrincipal11.png')">
 
-            <div class="carousel-caption d-none d-md-block">
-             <!-- <h3>Decimo Encuentro Centroaméricano de Software Libre</h3> -->
-             <!-- <p>El Salvador - 2018</p> -->
+            <div class="carousel-caption d-none d-sm-block font-weight-bold ">
+             <h3>Decimo Encuentro Centroaméricano de Software Libre</h3>
+             <p>El Salvador - 2018</p>
             </div>
 
           </div>
