--- a/index.html
+++ b/index.html
@@ -114,9 +114,11 @@
           <!-- Slide One - Set the background image for this slide in the line below -->
           <div class="carousel-item active" style="background-image: url('img/BannerPrincipal11.png')">
 
-            <div class="carousel-caption d-none d-sm-block font-weight-bold ">
-             <h3>Decimo Encuentro Centroaméricano de Software Libre</h3>
-             <p>El Salvador - 2018</p>
+            <div class="carousel-caption  ">
+             <h3 class="d-none d-lg-block font-weight-bold">X Encuentro Centroaméricano de Software Libre</h3>
+             <h4 class="d-none d-md-block d-lg-none font-weight-bold">X Encuentro Centroaméricano de Software Libre</h4>
+             <h6 class="d-md-none font-weight-bold">X Encuentro Centroaéricano de Software Libre</h6>
+             <p class="font-italic font-weight-bold">El Salvador - 2018</p>
             </div>
 
           </div>
@@ -261,64 +263,59 @@
 
       <div class="row">
 
-        <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item border-dark">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
           <a href="http://www.uca.edu.sv">
-          <div class="card h-100 ">
-              <img class="card-img-top rounded mx-auto d-block img-height  " src="img/UCA.png" alt="">
+          <div class="card">
+              <img class="card-img-top mx-auto  height-sponsors-img  " src="img/UCA.png" alt="">
             <div class="card-body">
-              <h4 class="card-title text-center">
-                UCA El Salvador
-              </h4>
+              <h5 class="card-title text-center">UCA El Salvador</h5>
             </div>
           </div>
           </a>
         </div>
 
-        <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item border-dark">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
           <a href="http://www.uca.edu.sv">
-          <div class="card h-100 ">
-              <img class="card-img-top rounded mx-auto d-block img-height  " src="img/UCA.png" alt="">
+          <div class="card">
+              <img class="card-img-top mx-auto  height-sponsors-img  " src="img/UCA.png" alt="">
             <div class="card-body">
-              <h4 class="card-title text-center">
-                UCA El Salvador
-              </h4>
+              <h5 class="card-title text-center">UCA El Salvador</h5>
             </div>
           </div>
           </a>
         </div>
 
-        <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item border-dark">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
           <a href="http://www.uca.edu.sv">
-          <div class="card h-100 ">
-              <img class="card-img-top rounded mx-auto d-block img-height  " src="img/UCA.png" alt="">
+          <div class="card">
+              <img class="card-img-top mx-auto  height-sponsors-img  " src="img/UCA.png" alt="">
             <div class="card-body">
-              <h4 class="card-title text-center">
-                UCA El Salvador
-              </h4>
+              <h5 class="card-title text-center">UCA El Salvador</h5>
             </div>
           </div>
           </a>
         </div>
 
-        <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item border-dark">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
           <a href="http://www.uca.edu.sv">
-          <div class="card h-100 ">
-              <img class="card-img-top rounded mx-auto d-block img-height  " src="img/UCA.png" alt="">
+          <div class="card">
+              <img class="card-img-top mx-auto  height-sponsors-img  " src="img/UCA.png" alt="">
             <div class="card-body">
-              <h4 class="card-title text-center">
-                UCA El Salvador
-              </h4>
+              <h5 class="card-title text-center">UCA El Salvador</h5>
             </div>
           </div>
           </a>
         </div>
 
-</div>
+
+      </div>
       <!-- /.row -->
 
 
     </div>
     <!-- /.container -->
+    <br>
+    <br>
 
     <!-- Pie de Pagina -->
     <footer class="py-5 bg-dark">
