--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
       <div class="row">
 
-        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12 portafolio-item">
           <a href="http://www.uca.edu.sv">
           <div class="card">
               <img class="card-img-top mx-auto  height-sponsors-img  " src="img/UCA.png" alt="">
@@ -274,7 +274,7 @@
           </a>
         </div>
 
-        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12 portafolio-item">
           <a href="http://www.uca.edu.sv">
           <div class="card">
               <img class="card-img-top mx-auto  height-sponsors-img  " src="img/UCA.png" alt="">
@@ -285,7 +285,7 @@
           </a>
         </div>
 
-        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12 portafolio-item">
           <a href="http://www.uca.edu.sv">
           <div class="card">
               <img class="card-img-top mx-auto  height-sponsors-img  " src="img/UCA.png" alt="">
@@ -296,7 +296,7 @@
           </a>
         </div>
 
-        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12 portafolio-item">
           <a href="http://www.uca.edu.sv">
           <div class="card">
               <img class="card-img-top mx-auto  height-sponsors-img  " src="img/UCA.png" alt="">
@@ -314,8 +314,7 @@
 
     </div>
     <!-- /.container -->
-    <br>
-    <br>
+
 
     <!-- Pie de Pagina -->
     <footer class="py-5 bg-dark">
