--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                   Evento
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarEvento">
-                  <a class="dropdown-item" href="index.html"><i class="fa fa-address-card-o" aria-hidden="true"></i> Registro</a>
-                  <a class="dropdown-item" href="logistica.html"><i class="fa fa-list-ul" aria-hidden="true"></i> Ejes Temáticos</a>
-                  <a class="dropdown-item" href="faq.html"><i class="fa fa-calendar" aria-hidden="true"></i>  Agenda</a>
+                  <a class="dropdown-item" href="registro.html"><i class="fa fa-address-card-o" aria-hidden="true"></i> Registro</a>
+                  <a class="dropdown-item" href="ejes-tematicos.html"><i class="fa fa-list-ul" aria-hidden="true"></i> Ejes Temáticos</a>
+                  <a class="dropdown-item" href="agenda.html"><i class="fa fa-calendar" aria-hidden="true"></i>  Agenda</a>
                 </div>
               </li>
 
